@@ -547,6 +547,7 @@
                 <!--suppress MavenModelInspection -->
                 <configuration>
                     <argLine>
+                        -XX:+EnableDynamicAgentLoading
                         <!--${argLine}-->
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.math=ALL-UNNAMED
